--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://shagen.me'
 languageCode = 'en-us'
-title = 'Personal Website of Stefan Hagen'
+title = 'shagen.me'
 theme = 'plague'
 
 [module]
@@ -11,13 +11,36 @@ theme = 'plague'
     path = "github.com/brianreumere/plague"
 
 [params]
-  siteHeaderText = "Stefan Hagen / sdk"
+  siteHeaderText = "shagen.me"
   siteFooterText = ""
   colors = "default"
   CustomStylesheet = "/css/custom.css"
 
 [params.hcard]
    fullName = "Stefan Hagen"
+
+[mediaTypes]
+  [mediaTypes.'application/x-php']
+    suffixes = ['php']
+
+[outputFormats]
+  [outputFormats.php]
+    mediaType = 'application/x-php'
+    isHTML = true
+
+[security]
+  enableInlineShortcodes = false
+
+  [security.exec]
+    allow = ['^(dart-)?sass(-embedded)?$', '^go$', '^git$', '^npx$', '^postcss$', '^tailwindcss$', '^vim$']
+    osEnv = ['(?i)^((HTTPS?|NO)_PROXY|PATH(EXT)?|APPDATA|TE?MP|TERM|GO\w+|(XDG_CONFIG_)?HOME|USERPROFILE|SSH_AUTH_SOCK|DISPLAY|LANG|SYSTEMDRIVE)$']
+
+  [security.funcs]
+    getenv = ['^HUGO_', '^CI$']
+
+  [security.http]
+    methods = ['(?i)GET|POST']
+    urls = ['.*']
 
 [frontmatter]
   date = [':filename', ':default']
